[tool.poetry]
name = "manim-v"
version = "0.1.0"
description = ""
authors = ["Keith W. Davis <kwdprof@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pycairo = "^1.24.0"
skyfield = "^1.48"
jupyterlab = "^4.1.5"
plotly = "^5.20.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
